--- a/src/components/RestaurantsDetail/Info/Features/Features.css
+++ b/src/components/RestaurantsDetail/Info/Features/Features.css
@@ -4,7 +4,7 @@
   align-items: center;
   width: 50%;
   margin: 10px 0;
-  margin-left: 100px;
+  /* margin-left: 100px; */
 }
 
 .restaurant-detail__features p {
