--- a/src/components/AboutUs/cover/Cover.css
+++ b/src/components/AboutUs/cover/Cover.css
@@ -1,11 +1,12 @@
 .cover-about__us {
   background-color: #fffce8;
   margin-top: -3.5rem;
+  margin-left: -15rem;
+  margin-right: -15rem;
   display: flex;
   justify-content: space-around;
   align-items: center;
   flex-wrap: wrap;
-  padding: 3.5rem;
 }
 
 .cover__text {
@@ -29,14 +30,14 @@
 }
 
 .cover__text p {
-  font-size: 22px;
+  font-size: 2rem;
   margin-bottom: 5rem;
   font-weight: 600;
   width: 80%;
 }
 
 .cover__text-link {
-  letter-spacing: 2px;
+  letter-spacing: 0.2rem;
   color: #fff;
   border: 1px solid #fab84c;
   background-color: #fab84c;
@@ -56,6 +57,15 @@
   justify-content: center;
   align-items: center;
 }
+.img-container__aboutus {
+  width: 35rem;
+  height: 60rem;
+}
+
+.img-container__aboutus img {
+  height: 100%;
+  width: 100%;
+}
 
 .img-container__aboutus img:first-of-type {
   transform: translateX(100px);
@@ -68,13 +78,13 @@
 .cover-footer {
   flex-basis: 100%;
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
 }
 
 .cover-footer img {
-  width: 160px;
-  height: 40px;
+  width: 10rem;
+  height: 2.5rem;
   margin-right: 15px;
 }
 
@@ -83,6 +93,10 @@
 }
 
 @media (max-width: 60rem) {
+  .cover-about__us {
+    margin-left: 0;
+    margin-right: 0;
+  }
   .cover-about__us {
     flex-direction: column;
     justify-content: center;
@@ -145,5 +159,12 @@
 
   .cover-footer p {
     font-size: 10px;
+  }
+}
+
+@media (max-width: 40rem) {
+  .cover-about__us {
+    margin-left: 0;
+    margin-right: 0;
   }
 }
