--- a/src/components/Restaurants/Restaurants.css
+++ b/src/components/Restaurants/Restaurants.css
@@ -1,16 +1,278 @@
-.res-container.container-fluid {
-  padding: 1rem;
+.restaurant-items {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
 }
 
-.res-container .card {
-  margin: 8px auto;
+.restaurant-item {
+  position: relative;
 }
 
-.res-container a:hover {
-  color: black;
-  text-shadow: none;
+.restaurant-card {
+  border-radius: 12px;
+  box-shadow: 2px 2px 8px rgb(0, 0, 0, 0.3);
+  margin: 10px;
+  width: 50rem;
+  overflow: hidden;
 }
 
-.center {
-  text-align: center;
+.restaurant-card a:hover {
+  color: #000;
+}
+
+.restaurant-card__image-container {
+  height: 20rem;
+  width: 100%;
+}
+
+.restaurant-card__image-container img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
+
+.restaurant-badge {
+  position: absolute;
+  top: 7rem;
+  background-color: #000;
+  color: #fff;
+  height: 3.5rem;
+  width: 16rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 4px;
+  border-bottom-left-radius: 0;
+}
+
+.restaurant-badge h1 {
+  font-size: 2rem;
+  font-weight: 900;
+  text-shadow: 0.8px 0 white;
+}
+
+.restaurant-badge h1 span:first-of-type {
+  color: red;
+  text-shadow: 0.8px 0 red;
+}
+
+.restaurant-badge h1 span:last-of-type {
+  color: darkgreen;
+  text-shadow: 0.8px 0 darkgreen;
+}
+
+.restaurant-badge__bottom {
+  position: absolute;
+  top: 9.7rem;
+  left: 0.2rem;
+  background-color: #000;
+  width: 50px;
+  height: 2.5rem;
+  z-index: -100;
+  transform: rotate(30deg);
+}
+
+.restaurant__info {
+  padding: 1.5rem 3rem;
+}
+
+.restaurant__name-ratings {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 1rem;
+}
+
+.restaurant__name-ratings h1 {
+  font-size: 2.4rem;
+  font-weight: 900;
+}
+
+.restaurant__name-ratings p {
+  font-size: 1.8rem;
+  font-weight: 900;
+  color: #fff;
+  background: #28933d;
+  border-radius: 2px;
+  padding: 0.5rem 1rem;
+}
+
+.restaurant__name-ratings svg {
+  transform: translateY(-1.5px);
+  margin-left: 2px;
+}
+
+.restaurant__cuisines-cost {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.restaurant__cuisines {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  width: 60%;
+  flex-wrap: wrap;
+  margin-bottom: 1rem;
+}
+
+.restaurant__cuisines p {
+  background-color: #f3eff3;
+  padding: 0.5rem;
+  border-radius: 3px;
+  margin: 2px;
+  font-size: 1.5rem;
+  color: #525252;
+}
+
+.cost {
+  font-size: 1.5rem;
+  color: #8c8c8c;
+  font-weight: 600;
+}
+
+.restaurant__cuisines-cost + hr {
+  color: #afaeaf;
+  height: 1px;
+}
+
+.restaurant-specifications {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: auto 0;
+}
+.restaurant-specifications p {
+  flex: 1;
+  text-align: right;
+}
+
+.restaurant-specifications__delivery-takeaway {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex: 1;
+}
+
+.restaurant-specifications__delivery-takeaway .specification svg,
+.restaurant-specifications__delivery-takeaway .error-specification svg {
+  background-color: #8c8c8c;
+  color: #fff;
+  border-radius: 50%;
+  padding: 3px;
+}
+
+.restaurant-specifications__delivery-takeaway .error-specification svg {
+  background-color: red;
+}
+
+.specification,
+.error-specification {
+  font-size: 1.5rem;
+  color: #8c8c8c;
+}
+
+.error-specification {
+  color: red;
+  text-decoration: line-through #8c8c8c;
+}
+
+.specification svg,
+.error-specification svg {
+  font-size: 2rem;
+}
+
+@media (max-width: 60rem) {
+  .restaurant__name-ratings h1 {
+    font-size: 5rem;
+  }
+
+  .restaurant-item {
+    flex: 1;
+    flex-basis: 100%;
+  }
+
+  .restaurant-card {
+    width: 95%;
+    margin: 20px;
+  }
+
+  .restaurant-card__image-container {
+    height: 60rem;
+  }
+
+  .cost {
+    font-size: 3.5rem;
+  }
+
+  .restaurant__name-ratings p {
+    font-size: 3.5rem;
+  }
+
+  .restaurant__cuisines p {
+    padding: 1.2rem;
+    font-size: 3.5rem;
+  }
+
+  .specification,
+  .error-specification {
+    font-size: 3rem;
+    font-weight: 600;
+  }
+
+  .specification svg,
+  .error-specification svg {
+    font-size: 3.5rem;
+  }
+}
+
+@media (max-width: 40rem) {
+  .restaurant-badge__bottom {
+    top: 11rem;
+  }
+
+  .restaurant-item {
+    flex: 1;
+    flex-basis: 100%;
+  }
+
+  .restaurant-card {
+    width: 90%;
+    margin: 8px 25px;
+  }
+
+  .restaurant-card__image-container {
+    height: 30rem;
+  }
+
+  .restaurant__name-ratings h1 {
+    font-size: 4rem;
+  }
+
+  .restaurant__name-ratings p {
+    font-size: 2.5rem;
+    padding: 0.8rem 1.5rem;
+  }
+
+  .restaurant__cuisines p {
+    padding: 1rem;
+    font-size: 2.5rem;
+  }
+
+  .cost {
+    font-size: 2.5rem;
+    color: #8c8c8c;
+    font-weight: 600;
+  }
+
+  .specification,
+  .error-specification {
+    font-size: 2.2rem;
+  }
+
+  .specification svg,
+  .error-specification svg {
+    font-size: 2.5rem;
+  }
 }
