--- a/src/components/RestaurantsDetail/Info/Offers/Offers.css
+++ b/src/components/RestaurantsDetail/Info/Offers/Offers.css
@@ -1,5 +1,5 @@
 .restaurant-detail__info-offers {
-  margin-right: 80px;
+  /* margin-right: 80px; */
   display: flex;
   align-self: flex-start;
 }
