--- a/src/components/RestaurantsDetail/Menu/Cart/Cart.css
+++ b/src/components/RestaurantsDetail/Menu/Cart/Cart.css
@@ -1,22 +1,22 @@
 @font-face {
-  font-family:segoe;
+  font-family: segoe;
   src: url(../../../../fonts/Segoe\ UI.ttf);
 }
-.checkout-wrapper{
+.checkout-wrapper {
   padding: 5rem 23rem 0rem 23rem;
 }
-.checkout{
+.checkout {
   font-size: 3.6rem;
-  font-family: Okra,Helvetica,sans-serif;
-  font-weight:500;
+  font-family: Okra, Helvetica, sans-serif;
+  font-weight: 500;
   color: rgb(54, 54, 54);
   margin-bottom: 5rem;
 }
-.display-name{
+.display-name {
   font-size: 2.6rem;
-  font-family: Okra,Helvetica,sans-serif;
+  font-family: Okra, Helvetica, sans-serif;
   font-weight: 500;
-  border:  0.1rem solid rgb(232, 232, 232);
+  border: 0.1rem solid rgb(232, 232, 232);
   border-radius: 8px;
   letter-spacing: 1px;
   text-align: left;
@@ -24,54 +24,53 @@
   margin-bottom: 2rem;
   color: rgb(54, 54, 54);
 }
-.display-email{
-  font-size:2.6rem;
-  font-weight:400;
-  font-family: Okra,Helvetica,sans-serif;
+.display-email {
+  font-size: 2.6rem;
+  font-weight: 400;
+  font-family: Okra, Helvetica, sans-serif;
   color: rgb(54, 54, 54);
   overflow: hidden;
   width: 100%;
 }
-.securely-logged{
+.securely-logged {
   font-size: 1.6rem;
-  font-family: Okra,Helvetica,sans-serif;
+  font-family: Okra, Helvetica, sans-serif;
   color: rgb(156, 156, 156);
   line-height: 2.5;
 }
-.select-icon{
+.select-icon {
   background-color: rgb(0, 60, 255);
   color: white;
   border-radius: 50%;
   width: 6%;
   height: 35%;
 }
-.address{
+.address {
   font-size: 2.2rem;
-  font-family: Okra,Helvetica,sans-serif;
+  font-family: Okra, Helvetica, sans-serif;
   font-weight: bold;
   line-height: 2.5;
   width: 70%;
-  height:7rem;
+  height: 7rem;
   overflow: hidden;
 }
-.address-text{
+.address-text {
   font-size: 2rem;
   color: rgb(156, 156, 156);
-  font-family: Okra,Helvetica,sans-serif;
+  font-family: Okra, Helvetica, sans-serif;
   font-weight: 100;
-
 }
 
 /* --------------right hand side cart ---------------- */
 
 .nocart-img__container img,
 .checkout-nocart img {
-  height: 500px;
+  height: 100%;
   object-fit: cover;
 }
 
 .nocart-img__container {
-  height: 500px;
+  height: 360px;
   flex: 3;
   overflow: hidden;
   position: relative;
@@ -83,7 +82,7 @@
   font-size: 16px;
   font-weight: 700;
   top: 50%;
-  left: 25%;
+  left: 12.5%;
 }
 .checkout-nocart p {
   position: absolute;
