--- a/src/components/css/searchBar.css
+++ b/src/components/css/searchBar.css
@@ -28,6 +28,22 @@
   
 }
 
+.noResultText{
+    background-color: rgb(255, 255, 255);
+    color: black;
+    font-size: 20px;
+    padding-left: 15%;
+    padding-top: 10px;
+    position: absolute;
+    z-index: 9;
+    width: 69vw;
+    height: 40px;
+    margin: auto;
+    align-items: center;
+    border: 2px solid rgba(104, 104, 104, 0.378);
+    border-radius: 10px;
+}
+
 .suggestionList> .MuiSvgIcon-root{
     padding: 1px;
     color: gray;
