changed css restaurant pages, about us and blog

--- a/src/components/AboutUs/streato_problemSolving/SectionTwoAndThree.css
+++ b/src/components/AboutUs/streato_problemSolving/SectionTwoAndThree.css
@@ -1,10 +1,10 @@
 .problem-solving {
-  padding: 3rem 1.5rem;
+  padding: 2rem 1rem;
 }
 
 .problem-solving h1 {
   text-align: center;
-  font-size: 4rem;
+  font-size: 2.5rem;
   color: #3e313e;
   font-weight: 700;
   margin: 4rem 0;
@@ -19,6 +19,7 @@
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
+  padding-left: 0;
 }
 
 .problem-solving__item {
@@ -35,27 +36,37 @@
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
   flex-direction: column;
-  margin: 2rem 0;
+  margin: 1rem 0;
+}
+
+.problem-solving__item-img {
+  width: 65%;
+  height: 15rem;
 }
 
 .problem-solving__item img {
-  width: 80%;
-  height: 27.5rem;
+  width: 100%;
+  height: 100%;
 }
 
 .problem-solving__item h3 {
-  font-size: 2.8rem;
+  font-size: 1.8rem;
   color: #3e313e;
   font-weight: 500;
-  margin: 2rem 0;
+  margin: 1rem 0;
+  text-align: center;
 }
 .problem-solving__item p {
   text-align: center;
-  font-size: 1.8rem;
+  font-size: 1rem;
   color: #959195;
 }
 
 @media (max-width: 960px) {
+  .problem-solving h1 {
+    font-size: 1.5rem;
+  }
+
   .problem-solving__items {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -63,17 +74,12 @@
     flex-direction: column;
   }
 
-  .problem-solving__item img {
-    height: 50rem;
-    width: 100%;
-  }
-
   .problem-solving__item h3 {
     font-weight: 600;
-    font-size: 4rem;
+    font-size: 2rem;
   }
 
   .problem-solving__item p {
-    font-size: 2.5rem;
+    font-size: 1.2rem;
   }
 }
