--- a/src/components/RestaurantsDetail/Info/Info.css
+++ b/src/components/RestaurantsDetail/Info/Info.css
@@ -8,22 +8,12 @@
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
   justify-content: space-between;
-  height: 100px;
-  margin-top: 20px;
+  height: 6rem;
+  margin-top: 1rem;
   cursor: pointer;
 }
 
 @media (max-width: 960px) {
-  .restaurant-detail__info-information {
-    height: -webkit-max-content;
-    height: -moz-max-content;
-    height: max-content;
-    -ms-flex-pack: distribute;
-    justify-content: space-around;
-  }
-}
-
-@media (max-width: 640px) {
   .restaurant-detail__info-information {
     height: -webkit-max-content;
     height: -moz-max-content;
