--- a/src/components/RestaurantsDetail/Info/NameAddress/NameAddress.css
+++ b/src/components/RestaurantsDetail/Info/NameAddress/NameAddress.css
@@ -8,26 +8,20 @@
 }
 
 .restaurant-detail__information h1 {
-  font-size: 30px;
+  font-size: 1.9rem;
   font-weight: 600;
 }
 
 .restaurant-detail__information p {
-  margin: 5px 0;
+  margin: 2px 0;
 }
 
 .restaurant-detail__information p:first-of-type {
-  font-size: 18px;
+  font-size: 1.2rem;
 }
 
 .restaurant-detail__information p:last-of-type {
-  font-size: 12px;
-}
-
-@media (max-width: 960px) {
-  .restaurant-detail__information {
-    margin: 0;
-  }
+  font-size: 1rem;
 }
 
 @media (max-width: 640px) {
@@ -36,15 +30,15 @@
   }
 
   .restaurant-detail__information h1 {
-    font-size: 18px;
+    font-size: 1rem;
   }
 
   .restaurant-detail__information p:first-of-type {
-    font-size: 12px;
+    font-size: 0.8rem;
   }
 
   .restaurant-detail__information p:last-of-type {
-    font-size: 10px;
+    font-size: 0.7rem;
   }
 }
 
