--- a/src/components/RestaurantsDetail/Menu/Cart/CartLink/CartLink.css
+++ b/src/components/RestaurantsDetail/Menu/Cart/CartLink/CartLink.css
@@ -8,8 +8,8 @@
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  margin: 50px 1rem 1rem;
-  padding: 2rem;
+  margin: 3rem 0 0;
+  padding: 1rem;
 }
 
 .cart-info__footer-logo {
@@ -17,16 +17,16 @@
 }
 
 .cart-info__footer-logo svg {
-  font-size: 32px;
+  font-size: 2rem;
 }
 
 .logo-badge {
-  font-size: 16px;
+  font-size: 1rem;
   position: absolute;
   top: -12px;
   left: 25px;
   border-radius: 50%;
-  width: 18px;
+  width: 1.5rem;
   color: #fff;
   background-color: #000;
   text-align: center;
@@ -40,12 +40,11 @@
 .cart-info__footer-btn {
   border: 1px solid #000;
   border-radius: 5px;
-  padding: 0.5rem 1.5rem 0;
+  padding: 0.25rem 0.8rem;
   display: inline-block;
-  width: 100px;
-  font-size: 16px;
+  width: 6rem;
+  font-size: 1rem;
   text-align: center;
-  height: 32px;
 }
 
 .cart-info__footer-btn:hover {
@@ -78,25 +77,25 @@
     -ms-flex-align: center;
     align-items: center;
     margin: 100px 0 0;
-    padding: 3rem;
+    padding: 1.5rem;
     width: 100%;
     -webkit-animation: slideUp 300ms ease forwards;
     animation: slideUp 300ms ease forwards;
   }
 
   .cart-info__mobile .logo-badge {
-    font-size: 16px;
+    font-size: 1rem;
     top: -6px;
     left: 25px;
-    width: 18px;
+    width: 1.2rem;
   }
 
   .cart-info__mobile a {
-    font-size: 16px;
+    font-size: 0.8rem;
   }
 
   .cart-info__footer-btn {
-    padding: 1rem 2rem;
+    padding: 0.5rem 1rem;
   }
 }
 
