--- a/src/components/RestaurantsDetail/Menu/Cart/CartList/CartList.css
+++ b/src/components/RestaurantsDetail/Menu/Cart/CartList/CartList.css
@@ -1,13 +1,13 @@
 .amount-line {
-  margin: 3rem;
+  margin: 1.5rem;
 }
 
 .total-amount {
   text-align: right;
-  margin-right: 2rem;
+  margin-right: 1rem;
 }
 
 .total-amount h1 {
-  font-size: 18px;
+  font-size: 1.1rem;
   font-weight: 700;
 }
