--- a/src/components/RestaurantsDetail/Menu/OverView/OverViewForm.css
+++ b/src/components/RestaurantsDetail/Menu/OverView/OverViewForm.css
@@ -1,12 +1,5 @@
-/*
-* Prefixed by https://autoprefixer.github.io
-* PostCSS: v8.3.6,
-* Autoprefixer: v10.3.1
-* Browsers: last 4 version
-*/
-
 .overview-review {
-  margin: 6rem;
+  margin: 4rem 2rem;
 }
 
 .overview-review__form {
@@ -30,8 +23,8 @@
   -webkit-box-shadow: 2px 2px 5px rgb(0, 0, 0, 0.2);
   box-shadow: 2px 2px 5px rgb(0, 0, 0, 0.2);
   border-radius: 5px;
-  font-size: 12px;
-  padding: 1.5rem;
+  font-size: 1.2rem;
+  padding: 0.8rem;
 }
 
 .overview-review__form textarea:focus {
@@ -40,9 +33,9 @@
 
 .overview-review__form button {
   border-radius: 50%;
-  padding: 8px 10px;
+  padding: 0.5rem 1rem;
   border: 1px solid #f7c12b;
-  font-size: 16px;
+  font-size: 1rem;
   font-weight: 800;
   color: #f7c12b;
   background-color: #fffcde;
