--- a/src/components/common/modal/Modal.css
+++ b/src/components/common/modal/Modal.css
@@ -14,7 +14,6 @@
   left: 12.5%;
   width: 80%;
   background-color: white;
-  padding: 1rem;
   border-radius: 8px;
   -webkit-box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
@@ -30,7 +29,7 @@
   }
 
   .modal-overlay {
-    width: 100%;
+    width: 100vw;
     border-radius: none;
     -webkit-box-shadow: none;
     box-shadow: none;
