--- a/src/components/AboutUs/BuisnessHighlights/BuisnessHighlights.css
+++ b/src/components/AboutUs/BuisnessHighlights/BuisnessHighlights.css
@@ -1,5 +1,5 @@
 .buisness-highlights h1 {
-  font-size: 4rem;
+  font-size: 2.5rem;
   text-align: center;
   font-weight: 700;
   margin: 2rem 0 4rem;
@@ -15,14 +15,15 @@
   -ms-flex-align: center;
   align-items: center;
   margin-bottom: 10rem;
+  padding-left: 0;
 }
 
 .buisness-highlights__item {
   background: url('../assets/IMAGEgold.png');
   background-repeat: no-repeat;
   background-size: cover;
-  height: 200px;
-  width: 32%;
+  height: 11.5rem;
+  width: 30%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -52,16 +53,16 @@
 }
 
 .buisness-highlights__item p {
-  font-size: 1.5rem;
+  font-size: 1rem;
   color: #fff;
   font-weight: 600;
   margin: 5px 15px;
 }
 .buisness-highlights__item h2 {
-  font-size: 5rem;
+  font-size: 2.5rem;
   font-weight: bolder;
   color: #fff;
-  margin: 20px;
+  margin: 1rem;
 }
 
 .buisness-highlights__item p:last-of-type {
@@ -75,30 +76,31 @@
     -webkit-box-direction: normal;
     -ms-flex-direction: column;
     flex-direction: column;
+    padding: 1rem;
   }
 
   .buisness-highlights h1 {
-    font-size: 5rem;
-    margin-bottom: 8rem;
+    margin: 5rem 0;
+    font-size: 2rem;
   }
 
   .buisness-highlights__item {
     width: 90%;
-    height: 250px;
+    height: 15rem;
     margin: 10px 0;
   }
 
   .buisness-highlights__item p {
-    font-size: 2.5rem;
+    font-size: 0.8rem;
   }
 
   .buisness-highlights__item h2 {
-    font-size: 5rem;
+    font-size: 1.8rem;
   }
 }
 
 @media (max-width: 640px) {
   .buisness-highlights__item {
-    height: 150px;
+    height: 8rem;
   }
 }
