--- a/src/components/AboutUs/Founder/Founder.css
+++ b/src/components/AboutUs/Founder/Founder.css
@@ -1,9 +1,9 @@
 .founder {
-  margin: 10rem 0 0;
+  margin: 5rem 0 0;
 }
 
 .founder h1 {
-  font-size: 4rem;
+  font-size: 2.5rem;
   text-align: center;
   font-weight: 700;
   margin: 0 0 4rem;
@@ -19,12 +19,14 @@
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
+  list-style: none;
+  padding-left: 0;
 }
 
 .founder__item {
   position: relative;
   width: 30%;
-  height: 70rem;
+  height: 35rem;
   border-radius: 30px;
   padding: 0;
   overflow: hidden;
@@ -46,12 +48,12 @@
 }
 
 .founder__item h2 {
-  font-size: 3rem;
+  font-size: 2rem;
   margin-bottom: 1rem;
   font-weight: 700;
 }
 .founder__item p {
-  font-size: 2rem;
+  font-size: 1.2rem;
 }
 
 @media (max-width: 960px) {
@@ -63,21 +65,21 @@
   }
 
   .founder__item {
-    width: 80%;
-    height: 180rem;
-    margin: 2rem 0;
+    width: 90%;
+    margin: 1rem 0;
+    height: 40rem;
   }
 
   .founder__item h2 {
-    font-size: 8rem;
+    font-size: 2rem;
   }
 
   .founder__item p {
-    font-size: 5rem;
+    font-size: 1rem;
   }
 }
 
-@media (max-width: 640px) {
+/* @media (max-width: 640px) {
   .founder__item {
     height: 90rem;
   }
@@ -89,4 +91,4 @@
   .founder__item p {
     font-size: 4rem;
   }
-}
+} */
