--- a/src/components/AboutUs/SuperStar/SuperStar.css
+++ b/src/components/AboutUs/SuperStar/SuperStar.css
@@ -1,13 +1,13 @@
 .superstar {
-  padding: 3rem;
+  padding: 1rem;
 }
 
 .superstar h1 {
-  font-size: 4rem;
+  font-size: 2.5rem;
   text-align: center;
   font-weight: 700;
   color: #3e313e;
-  margin: 2rem 0 4rem;
+  margin: 2rem 0;
 }
 
 .superstar__container {
@@ -25,8 +25,8 @@
 }
 
 .superstar-img__container {
-  height: 40rem;
-  width: 140rem;
+  height: 15rem;
+  width: 60rem;
   border-radius: 50%;
   overflow: hidden;
 }
@@ -41,15 +41,14 @@
 .superstar-name {
   margin: 10px 0;
   text-align: center;
-  -webkit-transform: translate(10%, 42rem);
-  -ms-transform: translate(10%, 42rem);
-  transform: translate(10%, 42rem);
-  /* transform: translateY(30rem); */
+  -webkit-transform: translate(10%, 20rem);
+  -ms-transform: translate(10%, 20rem);
+  transform: translate(10%, 20rem);
 }
 
 .superstar-name p,
 .superstar-name h3 {
-  font-size: 18px;
+  font-size: 1rem;
 }
 
 .superstar-name h3 {
@@ -62,21 +61,18 @@
 }
 
 .superstar-info__container p {
-  font-size: 20px;
+  font-size: 1.2rem;
   color: #3e313e;
   margin: 0 0 0 5rem;
 }
 
 .quote-image__background {
-  -webkit-transform: translate(120rem, -15rem);
-  -ms-transform: translate(120rem, -15rem);
-  transform: translate(120rem, -15rem);
+  -webkit-transform: translate(65rem, -4rem);
+  -ms-transform: translate(65rem, -4rem);
+  transform: translate(65rem, -4rem);
 }
 
 @media (max-width: 960px) {
-  .superstar {
-    margin-bottom: 20rem;
-  }
   .superstar__container {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -87,17 +83,16 @@
 
   .superstar-name {
     width: 50%;
-    -webkit-transform: translate(40rem, 25rem);
-    -ms-transform: translate(40rem, 25rem);
-    transform: translate(40rem, 25rem);
+    -webkit-transform: translate(10rem, 7.5rem);
+    -ms-transform: translate(10rem, 7.5rem);
+    transform: translate(10rem, 7.5rem);
   }
 
   .superstar-img__container {
     -ms-flex-item-align: start;
     align-self: flex-start;
-    margin-left: 10rem;
-    height: 30rem;
-    width: 30rem;
+    height: 8rem;
+    width: 8rem;
     border-radius: 50%;
     overflow: hidden;
     margin-bottom: 50px;
@@ -106,13 +101,24 @@
   .quote-image__background {
     height: 100px;
     width: 100px;
-    -webkit-transform: translate(40rem, 0);
-    -ms-transform: translate(40rem, 0);
-    transform: translate(40rem, 0);
+    -webkit-transform: translate(15rem, 0);
+    -ms-transform: translate(15rem, 0);
+    transform: translate(15rem, 0);
+  }
+
+  .superstar-info__container p {
+    font-size: 1rem;
+    color: #3e313e;
+    margin: 0 0 0 1rem;
   }
 
   .quote-image__background img {
     height: 100%;
     width: 100%;
+  }
+
+  .superstar h1 {
+    font-size: 1.5rem;
+    margin: 2rem 0;
   }
 }
