--- a/src/components/AboutUs/cover/Cover.css
+++ b/src/components/AboutUs/cover/Cover.css
@@ -1,8 +1,8 @@
 .cover-about__us {
   background-color: #fffce8;
   margin-top: -3.5rem;
-  margin-left: -10rem;
-  margin-right: -10rem;
+  margin-left: -3rem;
+  margin-right: -3rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -13,6 +13,7 @@
   align-items: center;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
+  padding: 4rem 2rem;
 }
 
 .cover__text {
@@ -30,15 +31,15 @@
 
 .cover__text h1 {
   color: #3e313e;
-  font-size: 10rem;
+  font-size: 4rem;
   font-weight: 900;
   text-shadow: 0px 1.5px, 1.5px 0px, 1.5px 1.5px;
-  margin: 7rem 0;
+  margin: 5rem 0;
 }
 
 .cover__text p {
-  font-size: 2rem;
-  margin-bottom: 5rem;
+  font-size: 1.5rem;
+  margin-bottom: 2.5rem;
   font-weight: 600;
   width: 80%;
 }
@@ -48,9 +49,9 @@
   color: #fff;
   border: 1px solid #fab84c;
   background-color: #fab84c;
-  font-size: 20px;
+  font-size: 1.2rem;
   font-weight: 900;
-  padding: 12px 50px;
+  padding: 1rem 3rem;
   border-radius: 30px;
 }
 
@@ -69,10 +70,8 @@
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-}
-.img-container__aboutus {
-  width: 35rem;
-  height: 60rem;
+  width: 15rem;
+  height: 28rem;
 }
 
 .img-container__aboutus img {
@@ -107,19 +106,18 @@
 }
 
 .cover-footer img {
-  width: 10rem;
-  height: 2.5rem;
-  margin-right: 15px;
+  width: 6rem;
+  height: 2rem;
+  margin-right: 1rem;
 }
 
 .cover-footer p {
-  font-size: 16px;
+  font-size: 1rem;
 }
 
 @media (max-width: 960px) {
   .cover-about__us {
     margin-left: 0;
-    padding: 2rem;
     margin-right: 0;
   }
   .cover-about__us {
@@ -138,17 +136,17 @@
     -ms-flex-item-align: center;
     -ms-grid-row-align: center;
     align-self: center;
-    margin-bottom: 20px;
+    text-align: center;
   }
 
   .cover__text h1 {
-    font-size: 8rem;
+    font-size: 1.8rem;
     text-align: center;
-    text-shadow: 0 0.8px 0.8px 0 0.8px 0.8px;
+    margin-bottom: 1rem;
   }
 
   .cover__text p {
-    font-size: 18px;
+    font-size: 1rem;
     text-align: center;
     width: 100%;
     font-weight: normal;
@@ -156,8 +154,9 @@
 
   .cover__text-link {
     display: inline-block;
-    width: 100%;
-    text-align: center;
+    font-size: 1rem;
+    padding: 0.4rem 2rem;
+    margin-bottom: 1rem;
   }
 
   .img-container__aboutus {
@@ -173,11 +172,12 @@
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center;
+    margin-bottom: 2rem;
   }
-  .img-container__aboutus img {
+  /* .img-container__aboutus img {
     width: 45rem;
     height: 80rem;
-  }
+  } */
 
   .img-container__aboutus img:first-of-type {
     -webkit-transform: translateX(70px);
