--- a/src/components/Blogs/BlogHeader/BlogHeader.css
+++ b/src/components/Blogs/BlogHeader/BlogHeader.css
@@ -23,7 +23,7 @@
 }
 
 .blog-searchbar span {
-  font-size: 20px;
+  font-size: 1.2rem;
   margin: 1.5px 10px;
   color: #6b6b6b;
   -webkit-transform: translateY(2px);
@@ -37,7 +37,7 @@
   -ms-flex: 1;
   flex: 1;
   border: none;
-  font-size: 12px;
+  font-size: 0.8rem;
 }
 
 .blog-searchbar input:focus {
@@ -58,9 +58,10 @@
 }
 
 .post-blog p {
-  font-size: 12px;
+  font-size: 1rem;
   color: #c4c4c4;
-  margin-right: 15px;
+  margin-right: 1rem;
+  margin-top: 1rem;
 }
 
 .post-blog button {
@@ -68,20 +69,15 @@
   background-color: #fab84c;
   border: 1px solid #fff;
   color: #fff;
-  font-size: 30px;
+  font-size: 2rem;
   padding: 0;
-  height: 35px;
-  width: 35px;
+  height: 25px;
+  width: 25px;
 }
 
 .post-blog svg {
-  -webkit-transform: translateY(-2px);
-  -ms-transform: translateY(-2px);
-  transform: translateY(-2px);
+  transform: translate(-4px, -16px);
 }
 
 @media (max-width: 960px) {
-  .post-blog p {
-    margin-right: 10px;
-  }
 }
