--- a/src/components/Restaurants/Restaurants.css
+++ b/src/components/Restaurants/Restaurants.css
@@ -10,6 +10,7 @@
   align-items: center;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
+  width: 100vw;
 }
 
 .restaurant-item {
@@ -20,8 +21,8 @@
   border-radius: 12px;
   -webkit-box-shadow: 2px 2px 8px rgb(0, 0, 0, 0.3);
   box-shadow: 2px 2px 8px rgb(0, 0, 0, 0.3);
-  margin: 10px;
-  width: 50rem;
+  margin: 10px 20px;
+  width: 25rem;
   overflow: hidden;
 }
 
@@ -30,7 +31,7 @@
 }
 
 .restaurant-card__image-container {
-  height: 20rem;
+  height: 12rem;
   width: 100%;
 }
 
@@ -43,11 +44,12 @@
 
 .restaurant-badge {
   position: absolute;
-  top: 7rem;
+  top: 2rem;
+  left: -0.8rem;
   background-color: #000;
   color: #fff;
-  height: 3.5rem;
-  width: 16rem;
+  height: 2rem;
+  width: 10rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -62,7 +64,7 @@
 }
 
 .restaurant-badge h1 {
-  font-size: 2rem;
+  font-size: 1.2rem;
   font-weight: 900;
   text-shadow: 0.8px 0 white;
 }
@@ -79,11 +81,11 @@
 
 .restaurant-badge__bottom {
   position: absolute;
-  top: 9.7rem;
-  left: 0.2rem;
+  top: 2.4rem;
+  left: -0.3rem;
   background-color: #000;
-  width: 50px;
-  height: 2.5rem;
+  width: 2.3rem;
+  height: 2.3rem;
   z-index: -100;
   -webkit-transform: rotate(30deg);
   -ms-transform: rotate(30deg);
@@ -91,7 +93,7 @@
 }
 
 .restaurant__info {
-  padding: 1.5rem 3rem;
+  padding: 0.8rem 1rem;
 }
 
 .restaurant__name-ratings {
@@ -104,28 +106,28 @@
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  margin-bottom: 1rem;
+  margin-bottom: 0.2rem;
 }
 
 .restaurant__name-ratings h1 {
-  font-size: 2.4rem;
-  font-weight: 900;
+  font-size: 1.3rem;
+  font-weight: 800;
 }
 
 .restaurant__name-ratings p {
-  font-size: 1.8rem;
-  font-weight: 900;
+  font-size: 0.9rem;
+  font-weight: 700;
   color: #fff;
   background: #28933d;
   border-radius: 2px;
-  padding: 0.5rem 1rem;
+  padding: 0.2rem 0.6rem;
 }
 
 .restaurant__name-ratings svg {
-  -webkit-transform: translateY(-1.5px);
-  -ms-transform: translateY(-1.5px);
-  transform: translateY(-1.5px);
-  margin-left: 2px;
+  -webkit-transform: translateY(-2px);
+  -ms-transform: translateY(-2px);
+  transform: translateY(-2px);
+  margin-left: 5px;
 }
 
 .restaurant__cuisines-cost {
@@ -152,27 +154,27 @@
   width: 60%;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
-  margin-bottom: 1rem;
+  margin-bottom: 0.2rem;
 }
 
 .restaurant__cuisines p {
   background-color: #f3eff3;
-  padding: 0.5rem;
+  padding: 0.25rem 0.5rem;
   border-radius: 3px;
-  margin: 2px;
-  font-size: 1.5rem;
+  margin: 0 2px;
+  font-size: 0.8rem;
   color: #525252;
 }
 
 .cost {
-  font-size: 1.5rem;
+  font-size: 0.9rem;
   color: #8c8c8c;
-  font-weight: 600;
 }
 
 .restaurant__cuisines-cost + hr {
   color: #afaeaf;
   height: 1px;
+  margin: 8px 0;
 }
 
 .restaurant-specifications {
@@ -185,13 +187,13 @@
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  margin: auto 0;
 }
 .restaurant-specifications p {
   -webkit-box-flex: 1;
   -ms-flex: 1;
   flex: 1;
   text-align: right;
+  transform: translateY(2px);
 }
 
 .restaurant-specifications__delivery-takeaway {
@@ -211,10 +213,9 @@
 
 .restaurant-specifications__delivery-takeaway .specification svg,
 .restaurant-specifications__delivery-takeaway .error-specification svg {
-  background-color: #8c8c8c;
-  color: #fff;
-  border-radius: 50%;
-  padding: 3px;
+  color: #8c8c8c;
+  margin-right: 2px;
+  transform: translateY(-2px);
 }
 
 .restaurant-specifications__delivery-takeaway .error-specification svg {
@@ -223,7 +224,7 @@
 
 .specification,
 .error-specification {
-  font-size: 1.5rem;
+  font-size: 0.8rem;
   color: #8c8c8c;
 }
 
@@ -235,14 +236,10 @@
 
 .specification svg,
 .error-specification svg {
-  font-size: 2rem;
+  font-size: 0.8rem;
 }
 
 @media (max-width: 960px) {
-  .restaurant__name-ratings h1 {
-    font-size: 5rem;
-  }
-
   .restaurant-item {
     -webkit-box-flex: 1;
     -ms-flex: 1;
@@ -251,89 +248,24 @@
     flex-basis: 100%;
   }
 
-  .restaurant-card {
-    width: 95%;
-    margin: 20px;
+  .restaurant-badge {
+    top: 2.5rem;
+    left: 0.5rem;
   }
 
-  .restaurant-card__image-container {
-    height: 60rem;
-  }
-
-  .cost {
-    font-size: 3.5rem;
-  }
-
-  .restaurant__name-ratings p {
-    font-size: 3.5rem;
-  }
-
-  .restaurant__cuisines p {
-    padding: 1.2rem;
-    font-size: 3.5rem;
-  }
-
-  .specification,
-  .error-specification {
-    font-size: 3rem;
-    font-weight: 600;
-  }
-
-  .specification svg,
-  .error-specification svg {
-    font-size: 3.5rem;
-  }
-}
-
-@media (max-width: 640px) {
   .restaurant-badge__bottom {
-    top: 11rem;
-  }
-
-  .restaurant-item {
-    -webkit-box-flex: 1;
-    -ms-flex: 1;
-    flex: 1;
-    -ms-flex-preferred-size: 100%;
-    flex-basis: 100%;
+    top: 3rem;
+    left: 1rem;
   }
 
   .restaurant-card {
     width: 90%;
-    margin: 8px 25px;
+    margin: 0.5rem 2rem;
   }
+}
 
-  .restaurant-card__image-container {
-    height: 30rem;
-  }
-
-  .restaurant__name-ratings h1 {
-    font-size: 4rem;
-  }
-
-  .restaurant__name-ratings p {
-    font-size: 2.5rem;
-    padding: 0.8rem 1.5rem;
-  }
-
-  .restaurant__cuisines p {
-    padding: 1rem;
-    font-size: 2.5rem;
-  }
-
-  .cost {
-    font-size: 2.5rem;
-    color: #8c8c8c;
-    font-weight: 600;
-  }
-
-  .specification,
-  .error-specification {
-    font-size: 2.2rem;
-  }
-
-  .specification svg,
-  .error-specification svg {
-    font-size: 2.5rem;
+@media (max-width: 640px) {
+  .restaurant-card {
+    width: 90%;
   }
 }
