--- a/src/components/RestaurantsDetail/Menu/Cart/Cart.css
+++ b/src/components/RestaurantsDetail/Menu/Cart/Cart.css
@@ -65,40 +65,44 @@
 
 .nocart-img__container img,
 .checkout-nocart img {
-  height: 100%;
+  height: 80%;
   -o-object-fit: cover;
   object-fit: cover;
 }
 
 .nocart-img__container {
-  height: 360px;
   -webkit-box-flex: 3;
   -ms-flex: 3;
   flex: 3;
   overflow: hidden;
   position: relative;
+  border-left: 2px solid #c4c4c4;
+  height: 30rem;
+  padding-left: 1rem;
 }
 
 .nocart-img__container p {
   position: absolute;
   color: #838383;
-  font-size: 16px;
+  font-size: 1rem;
   font-weight: 700;
-  top: 50%;
-  left: 12.5%;
+  top: 45%;
+  left: 20%;
 }
 .checkout-nocart p {
   position: absolute;
   color: #838383;
-  font-size: 16px;
+  font-size: 2rem;
   font-weight: 700;
   top: 50%;
-  left: 45%;
+  left: 15%;
 }
 
 .checkout-nocart {
   text-align: center;
   position: relative;
+  height: 30rem;
+  padding-left: 1rem;
 }
 
 @media (max-width: 960px) {
