--- a/src/components/RestaurantsDetail/Menu/Cart/CartCard/CartCard.css
+++ b/src/components/RestaurantsDetail/Menu/Cart/CartCard/CartCard.css
@@ -3,8 +3,8 @@
   -ms-flex: 3;
   flex: 3;
   border-left: 2px solid #c4c4c4;
-  height: 500px;
-  padding-left: 20px;
+  height: 30rem;
+  padding-left: 1rem;
 }
 
 .cart-card {
@@ -39,27 +39,28 @@
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  font-size: 30px;
-  padding: 2rem;
+  font-size: 1.6rem;
+  padding: 1rem;
   border-bottom: 1px solid #000;
 }
 
 .cart-info__logo {
-  margin-right: 20px;
+  margin-right: 1.2rem;
   color: #fff;
   background-color: #fac05e;
   border-radius: 50%;
-  height: 40px;
-  width: 40px;
+  height: 2.5rem;
+  width: 2.5rem;
   text-align: center;
 }
 
-.cart-info h1 {
+.cart-info__heading {
   font-weight: 700;
+  font-size: 1.5rem;
 }
 
 .cart-info__main {
-  margin: 2rem;
+  margin: 0.8rem;
 }
 
 .cart-info__restro-info {
@@ -72,21 +73,21 @@
 }
 
 .cart-info__img-container {
-  height: 50px;
-  width: 50px;
+  height: 3rem;
+  width: 3rem;
   background-color: #c4c4c4;
 }
 
 .cart-info__restro-info h1,
 .cart-info__restro-info p {
-  font-size: 14px;
+  font-size: 0.9rem;
   margin-left: 5px;
 }
 
 .cart-info__restro-info h1 {
   font-weight: 900;
-  margin-top: 5px;
-  margin-bottom: 5px;
+  margin-top: 1px;
+  margin-bottom: 1px;
 }
 
 .checkout-cart__btn {
