--- a/src/components/RestaurantsDetail/Menu/CustomizationModal/CustomizationModal.css
+++ b/src/components/RestaurantsDetail/Menu/CustomizationModal/CustomizationModal.css
@@ -9,56 +9,27 @@
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  margin: -1rem -1rem 1rem;
-  padding: 2rem;
+  padding: 1rem;
 }
 
 .customization-input {
-  margin: 10px;
-}
-
-.customization-input input:after {
-  cursor: pointer;
-  width: 15px;
-  height: 15px;
-  border-radius: 15px;
-  top: -2px;
-  left: -1px;
-  position: relative;
-  background-color: #fffcde;
-  content: '';
-  display: inline-block;
-  visibility: visible;
-  border: 2px solid #000;
-}
-
-.customization-input input:checked:after {
-  background-color: #f7c12b;
-  width: 15px;
-  height: 15px;
-  border-radius: 15px;
-  top: -2px;
-  left: -1px;
-  position: relative;
-  content: '';
-  display: inline-block;
-  visibility: visible;
-  border: 2px solid #000;
+  padding: 0.2rem 1rem;
 }
 
 .customization-input label {
-  font-size: 15px;
+  font-size: 1rem;
   font-weight: 500;
   margin-left: 10px;
 }
 
 .customization-footer {
   text-align: end;
+  padding: 0 1rem;
 }
 
 .customization-footer button {
-  height: 40px;
-  width: 150px;
+  padding: 0.5rem;
+  width: 100px;
   margin-bottom: 10px;
 }
 
@@ -74,28 +45,18 @@
 
 @media (max-width: 960px) {
   .customization-footer {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    margin-top: 100px;
+    text-align: center;
+    margin-top: 50px;
+    width: 100%;
   }
 
   .customization-footer button {
-    width: 80%;
-    height: 50px;
+    width: 90%;
+    height: 30px;
+    margin: 10px;
   }
 
-  .customization-footer button:first-of-type {
-    margin-bottom: 0;
+  .customization-footer button:last-of-type {
+    margin-bottom: 50px;
   }
 }
