--- a/src/components/RestaurantsDetail/Menu/Menu.css
+++ b/src/components/RestaurantsDetail/Menu/Menu.css
@@ -4,11 +4,16 @@
 }
 
 .menu {
-  margin-top: 50px;
+  margin-top: 2rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   position: relative;
+}
+
+.menu ul {
+  list-style: none;
+  padding-left: 0;
 }
 
 .menu h1,
