--- a/src/components/RestaurantsDetail/Menu/MenuList/MenuItem.css
+++ b/src/components/RestaurantsDetail/Menu/MenuList/MenuItem.css
@@ -9,12 +9,12 @@
   height: -webkit-max-content;
   height: -moz-max-content;
   height: max-content;
-  width: 40rem;
+  width: 45%;
 }
 
 .menu-list__img-container {
   width: 100%;
-  height: 240px;
+  height: 15rem;
   border-radius: 15px;
   overflow: hidden;
 }
@@ -22,12 +22,12 @@
 .menu-list__img-container img {
   width: 100%;
   height: 100%;
-  -o-object-fit: cover;
-  object-fit: cover;
+  -o-object-fit: contain;
+  object-fit: contain;
 }
 
 .menu-list__item-info {
-  padding: 2rem;
+  padding: 1rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -36,18 +36,18 @@
   justify-content: space-between;
 }
 
-.menu-list__name-price {
-  font-size: 15px;
+.menu-list__name-price h3 {
+  font-size: 1rem;
+  font-weight: 600;
   color: #000;
-  font-weight: 700;
 }
 .menu-list__name-price h3:first-of-type {
-  margin-bottom: 5px;
+  margin-bottom: 1px;
 }
 
 .dot {
-  width: 20px;
-  height: 20px;
+  width: 1rem;
+  height: 1rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -93,22 +93,21 @@
 }
 
 .menu-list__description {
-  margin-left: 2rem;
-  font-size: 12px;
-  width: 90%;
+  margin: 0 1rem 1rem;
+  font-size: 0.8rem;
   height: 40px;
   color: #000;
   letter-spacing: 0;
 }
 
 .menu-list__add-btn {
-  margin: 2rem 0 4rem 2rem;
+  margin: 3rem 0 1rem 1rem;
   background-color: #d72525;
   color: #fff;
   font-size: 15px;
   font-weight: 500;
   width: 100px;
-  padding: 1rem;
+  padding: 0.5rem;
   border-radius: 8px;
   -webkit-box-shadow: none;
   box-shadow: none;
@@ -120,7 +119,7 @@
   background-color: #fff;
 }
 
-@media (max-width: 90rem) {
+@media (max-width: 960px) {
   .menu-list__item {
     -webkit-box-flex: 1;
     -ms-flex: 1 1 100%;
