--- a/src/components/RestaurantsDetail/Menu/OverView/OverView.css
+++ b/src/components/RestaurantsDetail/Menu/OverView/OverView.css
@@ -2,15 +2,15 @@
   -webkit-box-flex: 7;
   -ms-flex: 7;
   flex: 7;
-  margin-bottom: 6rem;
+  margin-bottom: 1.5rem;
 }
 
 .overview-container {
-  margin: 3rem;
+  margin: 1rem;
 }
 
 .overview-container h1 {
-  font-size: 4rem;
+  font-size: 2rem;
   font-weight: 700;
   margin-bottom: 20px;
 }
@@ -23,14 +23,14 @@
 }
 
 .overview__img_container img {
-  height: 40px;
-  width: 40px;
+  height: 100%;
+  width: 100%;
   -o-object-fit: cover;
   object-fit: cover;
 }
 
 @media (max-width: 960px) {
   .overview-container h1 {
-    font-size: 6rem;
+    font-size: 2rem;
   }
 }
