--- a/src/components/RestaurantsDetail/Menu/OverView/OverViewItem.css
+++ b/src/components/RestaurantsDetail/Menu/OverView/OverViewItem.css
@@ -1,5 +1,5 @@
 .overview-item {
-  margin: 1rem 6rem;
+  margin: 1rem 3rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -16,12 +16,11 @@
   -webkit-box-flex: 1;
   -ms-flex: 1;
   flex: 1;
-  padding: 1.5rem;
+  padding: 0.5rem 1rem;
 }
 
 .overview-review__card h2 {
-  font-weight: 400;
-  font-size: 16px;
+  font-size: 1rem;
 }
 
 .overview-review__rating {
@@ -29,10 +28,10 @@
 }
 
 .overview-review__rating svg {
-  font-size: 16px;
+  font-size: 1rem;
   color: #ffd256;
 }
 
 .overview-review__card p {
-  font-size: 12px;
+  font-size: 0.8rem;
 }
