--- a/src/components/RestaurantsDetail/Menu/Tabs/Tabs.css
+++ b/src/components/RestaurantsDetail/Menu/Tabs/Tabs.css
@@ -14,22 +14,22 @@
   align-items: center;
   -webkit-box-shadow: 0 5px 12px rgb(0, 0, 0, 0.2);
   box-shadow: 0 5px 12px rgb(0, 0, 0, 0.2);
-  margin-bottom: 20px;
+  margin-bottom: 1.5rem;
 }
 
 .menu-list__tabs div {
-  padding: 2rem 1rem;
+  padding: 1rem;
   border: 2px solid #fff;
   border-radius: 25px;
   width: 100%;
-  font-size: 15px;
+  font-size: 1rem;
   font-weight: 600;
   color: #bababa;
   text-align: center;
 }
 
 .menu-list__tabs svg {
-  font-size: 20px;
+  font-size: 1.2rem;
 }
 
 .menu-list__tabs div:hover,
@@ -37,4 +37,13 @@
   border-color: #f7c12b;
   color: #000;
   background-color: #fffcde;
+}
+
+@media (max-width: 640px) {
+  .menu-list__tabs div {
+    font-size: 0.8rem;
+  }
+  .menu-list__tabs svg {
+    font-size: 0.8rem;
+  }
 }
