--- a/src/components/RestaurantsDetail/Menu/Types/MenuTypesDesktop.css
+++ b/src/components/RestaurantsDetail/Menu/Types/MenuTypesDesktop.css
@@ -3,14 +3,14 @@
   -ms-flex: 2;
   flex: 2;
   border-right: 3px solid #cfcfcf;
-  height: 500px;
+  height: 30rem;
 }
 
 .menu-types__heading {
-  font-size: 25px;
+  font-size: 1.5rem;
   font-weight: 700;
   cursor: pointer;
-  padding: 2rem 0;
+  padding: 1rem 0;
 }
 
 .menu-types ul {
@@ -18,8 +18,8 @@
 }
 
 .menu-types li {
-  padding: 2rem 0;
-  font-size: 15px;
+  padding: 1rem 0;
+  font-size: 1rem;
   color: #000;
 }
 
