--- a/src/components/RestaurantsDetail/Menu/Types/MenuTypesMobile.css
+++ b/src/components/RestaurantsDetail/Menu/Types/MenuTypesMobile.css
@@ -12,9 +12,7 @@
     border: 1px solid #000;
     border-radius: 3px;
     cursor: pointer;
-    font-size: 15px;
-    height: 30px;
-    width: 80px;
+    font-size: 1rem;
   }
 
   .menu-types__mobile-items {
@@ -35,8 +33,8 @@
   }
 
   .menu-types__mobile-items li {
-    padding: 1rem 20px;
-    font-size: 15px;
+    padding: 1rem 1.2rem;
+    font-size: 1rem;
     color: #000;
   }
 
