--- a/src/components/css/style.css
+++ b/src/components/css/style.css
@@ -40,34 +40,34 @@ ul li {
 
 .footer-download-container {
   background-color: black;
-  height: 8rem;
-  width: 30rem;
+  height: 4rem;
+  width: 10rem;
 }
 footer {
   background-color: white;
   -webkit-box-shadow: 0px -5px 10px rgb(211, 209, 209);
   box-shadow: 0px -5px 10px rgb(211, 209, 209);
-  margin-top: 40rem;
-}
-@media (max-width: 600px) {
-  footer {
-    margin-top: 20rem;
-  }
+  margin-top: 10rem;
 }
 
 .footer-download-icons {
-  font-size: 5rem;
+  font-size: 1.5rem;
   margin: inherit;
 }
 
 .footer-icons {
-  font-size: 4rem;
+  font-size: 2rem;
   margin: 0 1rem;
 }
 
 .font-weight-bolder {
   font-weight: bolder;
   color: black;
+}
+
+.footer-list {
+  list-style: none;
+  padding-left: 0;
 }
 
 .food-background {
