--- a/src/components/css/DealsOfTheDay.css
+++ b/src/components/css/DealsOfTheDay.css
@@ -1,8 +1,8 @@
 .big-font,
 .big-font-thin {
-  font-size: 4rem;
+  font-size: 2rem;
   letter-spacing: 1px;
-  margin-bottom: 4rem;
+  margin-bottom: 2rem;
 }
 .big-font {
   font-weight: bold;
@@ -14,7 +14,7 @@
 }
 .md-font-thin,
 .md-font {
-  font-size: 2rem;
+  font-size: 1rem;
 }
 .cuisine-img {
   width: 70%;
@@ -29,31 +29,33 @@
 
 /* DealsOfTheDay */
 .deal-container {
-  margin-bottom: 8rem;
-  padding-top: 4rem;
-  margin-top: 5rem;
+  margin-bottom: 5rem;
+  padding: 2rem 0.5rem 0rem 0.5rem;
+  margin-top: 2rem;
+  justify-content: space-around;
 }
 .deal-img {
   width: 70%;
-  height: 18rem;
+  height: 60%;
   border-radius: 5%;
-  padding-top: 2rem;
-  margin: auto;
+  padding: 1rem 0rem 4rem 0rem;
+  margin-right: 0rem;
   -webkit-box-shadow: 1px 1px 4px gray;
   box-shadow: 1px 1px 4px gray;
 }
 .deal-img-discount {
-  font-size: 2rem;
+  font-size: 1rem;
   text-align: center;
-  height: 5rem;
+  /* height: 5rem; */
   width: 60%;
-  padding: 1.5rem;
+  padding: 0.5rem;
 
   /* margin-top: 6rem; */
 }
 .viewMore-btn {
   color: #ffc107;
   width: 100%;
+  padding: 0rem;
 }
 .viewMore-btn:hover {
   color: black;
@@ -73,12 +75,18 @@
     text-align: left;
     -ms-flex-pack: distribute;
     justify-content: space-around;
+    margin-bottom: 1rem;
+
   }
   .deal-img {
+    width: 90%;
+    height: 25%;
+  }
+  .viewMore-btn {
     width: 100%;
   }
   .big-font,
   .big-font-thin {
-    font-size: 4rem;
+    font-size: 1.5rem;
   }
 }
