--- a/src/components/css/landingPage.css
+++ b/src/components/css/landingPage.css
@@ -14,7 +14,7 @@
 }
 .banner-text {
   text-align: center;
-  margin-top: 30rem;
+  margin-top: 10rem;
   background-image: -webkit-gradient(
     linear,
     left top,
@@ -25,10 +25,10 @@
   background-image: -o-linear-gradient(rgba(0, 0, 0, 0.062), #000000);
   background-image: linear-gradient(rgba(0, 0, 0, 0.062), #000000);
   padding-bottom: 10rem;
-  padding-top: 30rem;
+  padding-top: 10rem;
 }
 .outer-search-bar-2 {
-  padding: 0rem 40rem 0rem 20rem;
+  /* padding: 0rem 10rem 0rem 10rem; */
 }
 
 .search-bar,
@@ -41,11 +41,10 @@
   flex: 1;
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
-  justify-content: space-between;
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  height: 60px;
+  height: 50px;
   width: 100%;
   border-radius: 8px;
   background-color: white;
@@ -78,9 +77,9 @@
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center;
-  font-size: 2rem;
+  font-size: 1rem;
   font-weight: 550;
-  line-height: 2.5rem;
+  line-height: 1rem;
   padding-left: 1.5rem;
   font-family: segoe;
   letter-spacing: 1px;
@@ -89,7 +88,7 @@
   font-weight: 600;
 }
 .location-icon {
-  font-size: 4rem;
+  font-size: 2rem;
   color: #fac05e;
   margin-right: 1rem;
 }
@@ -99,6 +98,9 @@
 }
 .location-wrapper-2 {
   padding-right: 2rem;
+}
+.search{
+  padding: 0;
 }
 .input-search-bar {
   display: -webkit-box;
@@ -117,28 +119,28 @@
   -ms-flex: 2;
   flex: 2;
   background-color: #fce19e5d;
-  padding: 1rem 2rem;
+  padding: .5rem 2rem;
   border-radius: 8px;
   /* margin: 0rem 1rem; */
 }
 .search-icon {
-  font-size: 3.9rem;
+  font-size: 2rem;
   color: #686868;
   margin-right: 3rem;
-  margin-left: 2rem;
+  margin-left: 0rem;
 }
 .search-input {
   border: none;
   outline: none;
   width: 99%;
-  font-size: 3rem;
+  font-size: 1.2rem;
   font-family: segoe;
   letter-spacing: 0.2rem;
   background-color: #fce19e00;
 }
 .title {
   color: #ffffff;
-  font-size: 5rem;
+  font-size: 3rem;
   font-family: segoe;
   font-weight: 550;
   text-shadow: 2px 2px 5px black;
@@ -154,11 +156,11 @@
 }
 .explore-btn {
   color: white;
-  padding: 1rem 5rem;
-  font-size: 3rem;
+  padding: 0.5rem 3rem;
+  font-size: 1.5rem;
   font-family: 550;
   border-radius: 4px;
-  margin-top: 3rem;
+  margin-top: 1rem;
   font-family: segoe;
   letter-spacing: 2px;
 }
@@ -171,16 +173,16 @@
 
 .heading-text {
   color: black;
-  font-size: 5rem;
+  font-size: 2.5rem;
   font-weight: 600;
   font-family: segoe;
   text-align: center;
-  padding: 10rem 0rem 25rem 0rem;
+  padding: 5rem 0rem 3rem 0rem;
   /* text-shadow: 1px 1px .5px black; */
   /* background-image: linear-gradient(to right, #FFAB38, #FFEE8A); */
 }
 .explore-nearby-wrapper {
-  margin: -20rem 10rem 15rem 10rem;
+  margin: 0rem 10rem 5rem 10rem;
 }
 .nearbyFoodImgBurger {
   width: 80%;
@@ -195,58 +197,61 @@
   border-radius: 8px;
 }
 .explore-nearby-food-name {
-  font-size: 3rem;
+  font-size: 1.5rem;
   font-family: segoe;
   /* font-weight: bold; */
 }
 .vendors-wrapper {
   text-align: center;
-  margin: -12rem 10rem 15rem 10rem;
+  margin: 0rem 10rem 15rem 10rem;
 }
 .vendor-img {
   margin-bottom: 2rem;
   border-radius: 8px;
   width: 100%;
+  overflow: hidden;
 }
 .vendor-name {
-  font-size: 4rem;
+  font-size: 1.5rem;
   font-weight: 600;
-  margin-bottom: 1rem;
+  /* margin-bottom: 1rem; */
   font-family: segoe;
 }
 .vendor-location {
-  font-size: 3rem;
+  font-size: 1rem;
   font-weight: 600;
   letter-spacing: 2px;
   font-family: segoe;
 }
 .partner-wrapper {
   background-color: #040404;
-  padding: 8rem 10rem;
+  padding: 2rem 0rem 2rem 5rem;
   margin-bottom: 10rem;
 }
 .partner-banner-text {
-  font-size: 10rem;
+  font-size: 3rem;
   color: white;
   font-weight: 500;
-  margin-bottom: 4rem;
+  margin-bottom: 1rem;
   letter-spacing: 3px;
   font-family: segoe;
+  padding-top: 4rem;
 }
 .below-banner {
-  font-size: 4rem;
+  font-size: 2rem;
   color: white;
   font-weight: 400;
   font-family: segoe;
+  margin-bottom: 2rem;
 }
 .partner-img {
   width: 100%;
 }
 .our-services-wrapper {
-  margin: -12rem 10rem 15rem 10rem;
+  margin: 0rem 10rem 15rem 10rem;
 }
 .services {
-  height: 30rem;
+  height: 20rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -267,12 +272,13 @@
 .get-app {
   /* background-color: #FFAB38; */
   margin-bottom: 30rem;
+  background-color: rgba(233, 229, 229, 0.199);
 }
 .get-app-left {
-  padding: 8rem 0rem 8rem 8rem;
+  padding: 8rem 0rem 8rem 4rem;
 }
 .get-app-banner {
-  font-size: 10rem;
+  font-size: 5rem;
   color: black;
   font-weight: 600;
   margin-bottom: 4rem;
@@ -280,7 +286,7 @@
   font-family: segoe;
 }
 .below-get-app {
-  font-size: 4rem;
+  font-size: 2rem;
   color: black;
   font-weight: 400;
 }
@@ -300,93 +306,113 @@
 
 @media (max-width: 600px) {
   .banner-text {
-    margin-top: 20rem;
-    padding-bottom: 8rem;
+    margin-top: 10rem;
+    padding-bottom: 1.5rem;
     padding-top: 2rem;
   }
   .search-bar {
     height: 30px;
   }
-  .outer-search-bar,
+  .location-icon-name {
+    font-size: .8rem;
+    line-height: 1rem;
+    padding-left: 0.1rem;
+  }
+  .location-icon {
+    font-size: 1.5rem;
+    margin-right: .5rem;
+  }
+  .location-wrapper-2 {
+    padding-right: 1rem;
+  }
+  .search-icon {
+    margin-right: 1rem;
+    margin-left: 0rem;
+  }
+  .input-search-bar-2 {
+    padding: .5rem 0.5rem;
+    /* margin: 0rem 1rem; */
+  }
+  .search-input {
+    font-size: 1rem;
+    letter-spacing: 0.1rem;
+  }
+  /* .outer-search-bar,
   .outer-search-bar-2 {
     padding: 0rem 6rem;
-  }
+  } */
   .title {
-    font-size: 4.5rem;
-    margin-top: 1.5rem;
+    font-size: 1.5rem;
+    margin-top: 0rem;
   }
   .sub-title {
     font-size: 3rem;
     margin-top: 2rem;
   }
   .explore-btn {
-    margin-top: 5rem;
-    padding: 0.8rem 3.5rem;
-    font-size: 3rem;
+    margin: 0rem;
+    padding: 0.5rem 1.5rem;
+    font-size: 1rem;
   }
   .explore-nearby-wrapper {
-    margin: 1rem 0rem 10rem 2rem;
+    margin: 1rem 0rem 3rem 0rem;
   }
   .explore-nearby-bg {
-    background-color: rgba(221, 221, 221, 0.377);
+    /* background-color: rgba(221, 221, 221, 0.377); */
+    padding: 0;
   }
   .vendors-wrapper {
-    margin: 1rem 0rem 10rem 2rem;
+    margin: 1rem 0rem 10rem 0rem;
+    overflow: hidden;
   }
   .partner-wrapper {
-    padding: 4rem 5rem;
+    padding: 2rem 1rem;
     margin-bottom: 10rem;
   }
   .heading-text {
     /* text-align: left; */
-    padding: 5rem 2rem;
+    padding: 3rem 1rem 0.5rem 1rem;
     text-shadow: 1px 1px 0.5px black;
-    background-image: -webkit-gradient(
-      linear,
-      left top,
-      right top,
-      from(#ffab38),
-      to(#ffee8a)
-    );
-    background-image: -o-linear-gradient(left, #ffab38, #ffee8a);
-    background-image: linear-gradient(to right, #ffab38, #ffee8a);
+    font-size: 1.5rem;
   }
   .partner-banner-text {
-    font-size: 6rem;
-    margin-bottom: 3rem;
+    font-size: 1.5rem;
+    margin-bottom: 1rem;
+    letter-spacing: 3px;
+    padding-top: 1rem;
   }
   .below-banner {
-    font-size: 3rem;
-    line-height: 3.5rem;
-  }
-  .partner-wrapper {
-    padding: 4rem 5rem;
-    margin-bottom: 10rem;
+    font-size: 1rem;
+    line-height: 1rem;
   }
   .our-services-wrapper {
-    margin: 1rem 5rem 15rem 5rem;
+    margin: 1rem 0.5rem 15rem 0.5rem;
   }
   .services {
-    height: 25rem;
+    height: 10rem;
   }
   .get-app {
-    background-color: white;
+    background-color: rgba(238, 238, 238, 0.445);
+  }
+  .get-app-left {
+    padding: 4rem 0rem 4rem 0.5rem;
   }
   .get-app-banner {
-    font-size: 5rem;
-    margin-bottom: 3rem;
+    font-size: 1.5rem;
+    margin-bottom: 1rem;
     font-weight: bolder;
     color: black;
   }
   .below-get-app {
-    font-size: 4rem;
+    font-size: 1rem;
     color: black;
+    margin-bottom: 1rem;
   }
   .mobile {
-    padding: 5rem 5rem 1rem 0rem;
+    padding:2rem 2.5rem 2rem 0rem;
     text-align: right;
   }
   .mobile-img {
-    width: 70%;
+    width: 100%;
   }
 }
