--- a/src/components/css/SpecialOffer.css
+++ b/src/components/css/SpecialOffer.css
@@ -1,5 +1,5 @@
 .specialoffer-img {
-  height: 30%;
+  /* height: 30%; */
   width: 100%;
   border-radius: 12px;
   /* margin: auto auto; */
@@ -25,10 +25,15 @@
 }
 .slider-gray-bg {
   background-color: rgb(248, 248, 248);
-  padding: 5rem;
+  padding: 2rem;
 }
 
 @media (max-width: 600px) {
+  .slider {
+    margin-bottom: 2rem;
+    margin-top: 2rem;
+
+  }
   .specialOffer-slider {
     margin-bottom: 8rem;
     overflow: hidden;
@@ -37,9 +42,13 @@
     margin-left: 0;
     margin-right: 0;
   }
+  .specialOffer-slider2{
+    padding-left: 0rem;
+    padding-right: 1rem;
+    margin-bottom: 10rem;
+  }
   .specialoffer-img {
     width: 100%;
-    height: 25rem;
   }
   .center {
     text-align: center;
