--- a/src/components/css/style.css
+++ b/src/components/css/style.css
@@ -10,7 +10,7 @@ a {
   color: black;
 }
 
-.noraml-heading-font {
+.noraml-heading-font { 
   font-size: var(--m-font);
 }
 
@@ -32,45 +32,19 @@ a {
 }
 
 ul li {
-  padding: 1rem;
-  color: #999999;
+  padding: 1rem 0.5rem;
 }
 
 /* -------------footer-css----------- */
-
-.footer-download-container {
-  background-color: black;
-  height: 4rem;
-  width: 10rem;
-}
-footer {
-  background-color: white;
-  -webkit-box-shadow: 0px -5px 10px rgb(211, 209, 209);
-  box-shadow: 0px -5px 10px rgb(211, 209, 209);
-  margin-top: 10rem;
-}
-
-.footer-download-icons {
-  font-size: 1.5rem;
-  margin: inherit;
-}
-
-.footer-icons {
-  font-size: 2rem;
-  margin: 0 1rem;
-}
-
-.font-weight-bolder {
-  font-weight: bolder;
-  color: black;
-}
-
-.footer-list {
-  list-style: none;
-  padding-left: 0;
+footer{
+  box-shadow: -1px 0px 8px rgb(235, 233, 233);
+  padding-top: 3rem;
 }
 
 .food-background {
+  /* padding: 1rem; */
+  min-width: 4rem;
+  min-height: 12rem;
   background-image: -webkit-gradient(
       linear,
       left top,
@@ -91,8 +65,40 @@ footer {
     url('/src/components/Images/food.png');
   background-position: center;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size:cover;
   /* opacity: 0.5; */
+}
+.link-head{
+  font-size: 1.5rem;
+  color: black;
+  box-shadow: none;
+} 
+.company-links{
+  list-style:none ;
+  color: #999999;
+  text-align: center;
+  padding: 0;
+}
+.for-you-links{
+  list-style:none ;
+  color: #999999;
+  text-align: center;
+}
+.for-you-links>li,.company-links>li{
+  margin-bottom: 0.2rem;
+  box-shadow: 1px 1px 10px rgb(238, 238, 238);
+}
+.download-button-wrapper{
+  text-align: center;
+  padding: 3rem 0rem 0rem 0rem;
+}
+.download-btn{
+  line-height: .8rem;
+  padding: 1rem 3rem;
+  color: white;
+  font-size: 1.2rem;
+  font-weight: 600;
+  margin-bottom: 2rem;
 }
 
 /* ------------listingcards-------------- */
@@ -113,7 +119,7 @@ footer {
 .tab-selection-container::before {
   content: '';
   display: block;
-  width: 14rem;
+  width: 2rem;
   height: 0.6rem;
   background-color: #f8eddb;
   position: absolute;
@@ -134,8 +140,8 @@ footer {
 
 .trolly-tab-selection {
   position: relative;
-  width: 10rem;
-  height: 10rem;
+  width: 5rem;
+  height: 5rem;
   display: inline-block;
   margin: 0 5rem 2rem 0;
   background-color: #fab84c;
@@ -145,8 +151,8 @@ footer {
 }
 
 .lunch-tab-selection {
-  width: 10rem;
-  height: 10rem;
+  width: 5rem;
+  height: 5rem;
   display: inline-block;
   padding: 1rem;
   margin: 0 0 2rem 0;
@@ -158,9 +164,19 @@ footer {
   width: 100%;
 }
 
-@media (max-width: 60rem) {
+@media (max-width: 600px) {
   .main-container {
     width: 90%;
+  }
+  .trolly-tab-selection{
+    width: 3rem;
+    height: 3rem;
+    margin: 0 2rem 2rem 0;
+
+  }
+  .lunch-tab-selection{
+    width: 3rem;
+    height: 3rem;
   }
 }
 
