--- a/src/components/RestaurantsDetail/Menu/OverView/OverView.css
+++ b/src/components/RestaurantsDetail/Menu/OverView/OverView.css
@@ -30,6 +30,9 @@
 }
 
 @media (max-width: 960px) {
+  .overview-container {
+    margin: 0;
+  }
   .overview-container h1 {
     font-size: 2rem;
   }
