--- a/src/components/css/style.css
+++ b/src/components/css/style.css
@@ -454,8 +454,8 @@ footer {
 }
 
 .google-tab-btn {
-  width: 29.5rem;
-  height: 5rem;
+  width: 20rem;
+  height: 2.5rem;
   border: none;
   -webkit-box-shadow: 0px 1px 5px 1px #e0e0e0;
   box-shadow: 0px 1px 5px 1px #e0e0e0;
@@ -463,8 +463,8 @@ footer {
 }
 
 .facebook-tab-btn {
-  width: 29.5rem;
-  height: 5rem;
+  width: 20rem;
+  height: 2.5rem;
   border: none;
   -webkit-box-shadow: 0px 1px 5px 1px #e0e0e0;
   box-shadow: 0px 1px 5px 1px #e0e0e0;
@@ -472,8 +472,8 @@ footer {
 }
 
 .email-tab-btn {
-  width: 29.5rem;
-  height: 5rem;
+  width: 20rem;
+  height: 2.5rem;
   border: none;
   -webkit-box-shadow: 0px 1px 5px 1px #e0e0e0;
   box-shadow: 0px 1px 5px 1px #e0e0e0;
@@ -487,11 +487,70 @@ footer {
 }
 
 .login-icons {
-  height: 3rem;
+  height: 1.5rem;
+  align-self: flex-start;
 }
 
-@media (max-width: 640px) {
+@media (max-width: 960px) {
   .login-container-left {
     display: none !important;
+  }
+
+  .login-container-right {
+    margin: 0;
+    padding: 0.5rem;
+  }
+
+  .login-container-right img {
+    width: 50%;
+  }
+
+  .login-form {
+    width: 100%;
+    overflow: hidden;
+    margin: 1rem 0 !important;
+  }
+
+  .login-input-select {
+    border-right: 0.1rem solid #fac05e;
+    margin-bottom: 0;
+    height: 2rem;
+  }
+
+  .login-input {
+    height: 2rem;
+    width: 80%;
+  }
+
+  .login-form-container {
+    width: 80%;
+    flex-direction: column;
+  }
+
+  .google-tab-btn {
+    width: 60%;
+    height: 2rem;
+  }
+
+  .google-tab-btn p,
+  .email-tab-btn p {
+    font-size: 1rem;
+    margin: 0;
+  }
+
+  .login-icons {
+    height: 1rem !important;
+    width: 1rem !important;
+  }
+
+  .email-tab-btn {
+    width: 60%;
+    height: 2rem;
+  }
+
+  .email-tab-btn + p {
+    font-size: 0.8rem;
+    text-align: center;
+    padding: 1rem;
   }
 }
