--- a/src/components/RestaurantsDetail/Menu/Cart/Cart.css
+++ b/src/components/RestaurantsDetail/Menu/Cart/Cart.css
@@ -3,29 +3,42 @@
   src: url(../../../../fonts/Segoe\ UI.ttf);
 }
 .checkout-wrapper {
-  padding: 5rem 23rem 0rem 23rem;
+  padding: 2.5rem;
 }
-.checkout {
-  font-size: 3.6rem;
+
+.checkout-wrapper .row {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.checkout-title {
+  font-size: 3.5rem;
   font-family: Okra, Helvetica, sans-serif;
   font-weight: 500;
   color: rgb(54, 54, 54);
-  margin-bottom: 5rem;
+  margin-bottom: 2rem;
+  margin-top: -3.5rem;
+  text-align: center;
 }
 .display-name {
-  font-size: 2.6rem;
+  font-size: 1.2rem;
   font-family: Okra, Helvetica, sans-serif;
   font-weight: 500;
   border: 0.1rem solid rgb(232, 232, 232);
   border-radius: 8px;
   letter-spacing: 1px;
   text-align: left;
-  padding: 3rem;
+  padding: 1.5rem;
   margin-bottom: 2rem;
   color: rgb(54, 54, 54);
 }
+
+.display-name h1 {
+  font-size: 1.5rem;
+}
 .display-email {
-  font-size: 2.6rem;
+  font-size: 1rem;
   font-weight: 400;
   font-family: Okra, Helvetica, sans-serif;
   color: rgb(54, 54, 54);
@@ -33,7 +46,7 @@
   width: 100%;
 }
 .securely-logged {
-  font-size: 1.6rem;
+  font-size: 0.8rem;
   font-family: Okra, Helvetica, sans-serif;
   color: rgb(156, 156, 156);
   line-height: 2.5;
@@ -42,23 +55,38 @@
   background-color: rgb(0, 60, 255);
   color: white;
   border-radius: 50%;
-  width: 6%;
-  height: 35%;
+  width: 3%;
 }
 .address {
-  font-size: 2.2rem;
+  font-size: 1.2rem;
   font-family: Okra, Helvetica, sans-serif;
   font-weight: bold;
-  line-height: 2.5;
-  width: 70%;
-  height: 7rem;
+  line-height: 1.5;
   overflow: hidden;
 }
 .address-text {
-  font-size: 2rem;
+  font-size: 1rem;
   color: rgb(156, 156, 156);
   font-family: Okra, Helvetica, sans-serif;
   font-weight: 100;
+}
+
+@media (max-width: 640px) {
+  .container.checkout-wrapper {
+    width: auto;
+  }
+  .checkout-wrapper {
+    padding: 1rem;
+  }
+
+  .checkout-title {
+    font-size: 1.5rem;
+  }
+
+  .select-icon {
+    width: 8%;
+    height: 15%;
+  }
 }
 
 /* --------------right hand side cart ---------------- */
@@ -122,5 +150,15 @@
 
   .checkout-nocart p {
     left: 25%;
+  }
+}
+
+@media (max-width: 640px) {
+  .checkout-nocart img {
+    width: 80%;
+  }
+  .checkout-nocart p {
+    left: 20%;
+    font-size: 1.2rem;
   }
 }
