--- a/src/components/RestaurantsDetail/Menu/Cart/CartCard/CartCard.css
+++ b/src/components/RestaurantsDetail/Menu/Cart/CartCard/CartCard.css
@@ -21,7 +21,7 @@
 }
 
 .checkout {
-  margin-top: -3.5rem;
+  margin-bottom: 3.5rem;
 }
 
 .checkout .cart-card {
@@ -96,10 +96,10 @@
   border: none;
   margin-bottom: 20px;
   border-radius: 8px;
-  font-size: 16px;
+  font-size: 1rem;
   font-weight: 800;
-  height: 50px;
-  width: 300px;
+  height: 1.5rem;
+  width: 50%;
 }
 
 .checkout-actions {
@@ -110,9 +110,5 @@
 @media (max-width: 960px) {
   .cart {
     display: none;
-  }
-
-  .checkout-cart__btn {
-    width: 100%;
   }
 }
