--- a/src/index.css
+++ b/src/index.css
@@ -2,11 +2,18 @@
   box-sizing: content-box;
 }
 
+body,
+html {
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+}
+
 .main-container {
   width: 85%;
   height: auto;
   margin: auto;
 }
-.row{
+.row {
   margin: 0;
 }
