--- a/src/components/AboutUs/cover/Cover.css
+++ b/src/components/AboutUs/cover/Cover.css
@@ -37,7 +37,10 @@
   text-shadow: 0px 1.5px, 1.5px 0px, 1.5px 1.5px;
   margin: 5rem 0;
 }
-
+/* 
+.circle-img-wrapper{
+  position: absolute;
+} */
 .cover__text p {
   font-size: 1.5rem;
   margin-bottom: 2.5rem;
